--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -10,7 +10,7 @@ jobs:
         - name: list files
           run: ls -lrt
 
-        # - name: execute shell script
-        #   run: |
-        #      chmod +x command.sh
-        #      ./command.sh  
+        - name: execute shell script
+          run: |
+             chmod +x command.sh
+             ./command.sh  
