--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -8,7 +8,7 @@ jobs:
           uses: actions/checkout@v4
 
         - name: list files
-          run: ls -lrt
+          run: ls -lrta
 
         - name: execute shell script
           run: |
