--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -9,7 +9,7 @@ jobs:
         
         - name: list files
           run: |
-              ls -lrta
+              echo $SHELL
               echo $0  
         
         - name: execute shell script
