--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -14,7 +14,7 @@ jobs:
         
         - name: execute shell script
           run: ./command.sh 
-          shell: /usr/bin/bash
+          shell: bash
         
        
 
