--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -12,9 +12,9 @@ jobs:
               echo $SHELL
               echo $0  
         
-        - name: execute shell script
-          run: ./command.sh 
-          shell: bash --noprofile --norc -exo pipefail {0}
+        # - name: execute shell script
+        #   run: ./command.sh 
+        #   shell: bash --noprofile --norc -exo pipefail {0}
         
        
 
