--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -10,11 +10,11 @@ jobs:
         - name: list files
           run: |
               echo $SHELL
-              echo $0  
+              echo $0
         
-        # - name: execute shell script
-        #   run: ./command.sh 
-        #   shell: bash --noprofile --norc -exo pipefail {0}
+        - name: execute shell script
+          run: ./command.sh
+          shell: bash
         
        
 
