--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -9,11 +9,14 @@ jobs:
         
         - name: list files
           run: |
+              ls -lrt
               echo $SHELL
               echo $0
         
         - name: execute shell script
-          run: ./command.sh
+          run: |
+             cd .github/workflows 
+             ./command.sh
           shell: bash
         
        
