--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -16,6 +16,7 @@ jobs:
         - name: execute shell script
           run: |
              cd .github/workflows 
+             chmod +x command.sh
              ./command.sh
           shell: bash
         
