--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -9,24 +9,11 @@ jobs:
         
         - name: list files
           run: |
-              ls -lrt
-              echo $SHELL
-              echo $0
+              ls -lrta
         
         - name: execute shell script
           run: |
              cd .github/workflows 
              chmod +x command.sh
              ./command.sh
-          shell: bash
-        
-       
-
-          
-
-        # - name: install cowsay package
-        #   run: sudo apt-get install cowsay -y    
-        
-        # - name: generate ASCII art
-        #   run: cowsay -f dragon 
              
