--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -12,6 +12,12 @@ jobs:
         
         - name: Run cowsay command
           run: cowsay -f dragon "run for cover" >> dragon.txt
+
+        - name: upload the file
+          uses: actions/upload-artifact@v3
+          with:
+            name:  dragon text file
+            path: dragon.txt
     
     Test_job2:
         needs: Build_job1
@@ -19,6 +25,11 @@ jobs:
         steps:
         - name: Checkout
           uses: actions/checkout@v4
+        
+        - name: download the file
+          uses: actions/download-artifact@v3
+          with:
+            name:  dragon text file        
         
         - name: Validate the file
           run: grep -i "dragon" dragon.txt
@@ -29,6 +40,10 @@ jobs:
         steps:
         - name: Checkout
           uses: actions/checkout@v4
-        
+
+        - name: download the file
+          uses: actions/download-artifact@v3
+          with:
+            name:  dragon text file         
         - name: read the file
           run: cat .github/workflows/dragon.txt                       
