--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -11,7 +11,7 @@ jobs:
           run: sudo apt-get install cowsay -y
         
         - name: Run cowsay command
-          run: cowsay -f dragon "run for cover" >> dragon.txt
+          run: cowsay -f dragon "run for dragon cover" >> dragon.txt
 
         - name: upload the file
           uses: actions/upload-artifact@v3
