--- a/.github/workflows/actions_1.yml
+++ b/.github/workflows/actions_1.yml
@@ -46,4 +46,4 @@ jobs:
           with:
             name:  dragon text file         
         - name: read the file
-          run: cat .github/workflows/dragon.txt                       
+          run: cat dragon.txt                       
