--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs: 
   docker:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
     - name: docker build
       run: docker build -t docker.io/docker.Username/imageName:latest
@@ -17,7 +17,7 @@ jobs:
 
   Deploydocker:
     needs: docker
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
     - name: docker run
-      run: docker run -d -p 8080:80 docker.io/docker.Username/imageName:latest     
+      run: docker run -d -p 8080:80 docker.io/docker.Username/imageName:latest  
